// Global configuration options for this repository.
//
// Copyright 2019 Chris Cummins <chrisc.101@gmail.com>.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto2";

package phd;

option go_package = "phdpb";
option java_multiple_files = true;
option java_outer_classname = "ConfigProto";
option java_package = "com.phd";

// Bazel build stamp info.
message BuildInfo {
  required int64 seconds_since_epoch = 1;
  // The path of the workspace. This leaks the out-of-tree build abstraction
  // enforced by bazel, and this directory is likely not available from within
  // bazel test sandbox. Access this value only when truly required, such as
  // from within tool that modify or export the source tree.
  required string unsafe_workspace = 2;
  required string host = 3;
  required string user = 4;
  required string version = 5;
  required bool repo_dirty = 6;
  // Git branch and remote are only available if on and tracking a git branch,
  // respectively.
  required string git_commit = 7;
  optional string git_branch = 8;
  optional string git_tracking = 9;
  optional string git_remote_url = 10;
  optional string git_commit_author = 11;
  optional int64 git_commit_seconds_since_epoch = 12;
}
